--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
   <img>
-  <H1>Header 1</H1>   
+  <H1>Creation camp logo</H1>
+  <H2>Creation camp</H2>   
   <head>
+    <P>Place holder paragraph<P>
+      <ul>
+<li>item 1</li>
+        <li>item 2</li>       
+        <li>Item3</li>
+</ul>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
